--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,39 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-text-color: #f1b2ce;
+  --page-font-family: "IBM Plex Mono", monospace;
+  --page-background-color: #000028;
+  --accent-color: #ff0070;
+  --menu-color: #ff0070;
+  --title-shadow: #ff0070;
+  --decor-color: #ff0070;
+  --question-color: #ff0070;
+  --title-decor-color: #000028;
+  --hover-button-color: #ff007040;
+  --background-image: url(../images/cover-image-dark.png);
+  --page-title-color: #db00ff;
+  --page-font-size: 18px;
+  --pink-color: #ff8dcb;
+  --rec-decor-visibility: visible;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --page-text-color: #f1b2ce;
+    --page-font-family: "IBM Plex Mono", monospace;
+    --page-background-color: #000028;
+    --accent-color: #ff0070;
+    --menu-color: #ff0070;
+    --title-shadow: #ff0070;
+    --decor-color: #ff0070;
+    --question-color: #ff0070;
+    --title-decor-color: #000028;
+    --hover-button-color: #ff007040;
+    --background-image: url(../images/cover-image-dark.png);
+    --page-title-color: #db00ff;
+    --page-font-size: 18px;
+    --pink-color: #ff8dcb;
+    --rec-decor-visibility: visible;
+  }
 }
