--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,33 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-text-color: #353430;
+  --menu-color: #353430;
+  --hover-button-color: #35343040;
+  --page-background-color: #fff1f7;
+  --title-shadow: #ff0070;
+  --accent-color: #ff8dcb;
+  --decor-color: #353430;
+  --question-color: #353430;
+  --title-decor-color: #353430;
+  --background-image: url(../images/cover-image-light.png);
+  --page-title-color: #ffc2e6;
+  --rec-decor-visibility: hidden;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --page-text-color: #353430;
+    --menu-color: #353430;
+    --hover-button-color: #35343040;
+    --page-background-color: #fff1f7;
+    --title-shadow: #ff0070;
+    --accent-color: #ff8dcb;
+    --decor-color: #353430;
+    --question-color: #353430;
+    --title-decor-color: #353430;
+    --background-image: url(../images/cover-image-light.png);
+    --page-title-color: #ffc2e6;
+    --rec-decor-visibility: hidden;
+  }
 }
