--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,307 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  color: var(--page-text-color);
+  font-family: var(--page-font-family, "IBM Plex Mono", monospace);
+  font-size: var(--page-font-size);
+  font-weight: 400;
+  background-color: var(--page-background-color);
+  line-height: 23.4px;
+  background-image: var(--background-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.cover {
+  display: grid;
+  min-block-size: 100vh;
+  padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin-block: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 2px 12px;
+  color: var(--menu-color);
+  line-height: var(--page-font-size);
+  background: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--hover-button-color);
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border-color: var(--menu-color);
+}
+
+.header_theme-menu-button:focus {
+  outline: none;
+}
+
+.header_theme-menu-button:focus-visible {
+  outline: none;
+  border-block-end: 1px solid var(--menu-color);
+}
+
+.link:hover {
+  border-block-end: 1px solid var(--page-text-color);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--page-text-color);
+}
+
+.shadow-decor {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::before {
+  border-inline-end: 1px solid var(--decor-color);
+  border-block-start: 1px solid var(--decor-color);
+  inset-inline-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.decorated-zone::after {
+  border-inline-start: 1px solid var(--decor-color);
+  border-block-end: 1px solid var(--decor-color);
+  inset-inline-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+  inset-block-end: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.rec-decor {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  visibility: var(--rec-decor-visibility, visible);
+  inset-inline-end: clamp(1.125rem, 2.545vw + 0.529rem, 1.75rem);
+  inset-block-start: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.rec-decor::before {
+  content: "REC";
+  color: var(--accent-color);
+  line-height: 25px;
+}
+
+.rec-decor::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  background: var(--accent-color);
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+.title {
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  color: var(--page-title-color);
+}
+
+.header__title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header_subtitle {
+  font-weight: 700;
+  font-size: inherit;
+  line-height: inherit;
+  margin-block: 55px;
+}
+
+.title-decor {
+  color: var(--title-decor-color);
+  background: var(--accent-color);
+}
+
+.content {
+  display: grid;
+  gap: 50px;
+  padding: 40px 10px;
+}
+
+.section {
+  display: grid;
+  gap: 20px;
+}
+
+.advice-list {
+  display: grid;
+  gap: 20px;
+}
+
+.advice-list__item {
+  display: grid;
+  gap: 10px;
+}
+
+.five_advice_passage {
+  display: grid;
+  gap: 20px;
+}
+
+.gallery-list {
+  display: grid;
+  gap: 10px;
+}
+
+.question {
+  font-size: var(--page-font-size);
+  font-weight: 700;
+  color: var(--question-color);
+}
+
+.advice_heading {
+  font-size: var(--page-font-size);
+  font-weight: 400;
+}
+
+.advice-title {
+  font-size: var(--page-font-size);
+}
+.section_gallery {
+  display: grid;
+  gap: 10px;
+}
+
+.images-list {
+  display: grid;
+  gap: 10px;
+}
+
+.images-list__item-img {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__title {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px) {
+  .rec-decor {
+    inset-inline-end: 28px;
+    inset-block-start: 20px;
+  }
+
+  .cover {
+    grid-template-rows: 1fr auto 1fr;
+  }
+
+  .header__theme-menu {
+    margin-block-start: 173px;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header {
+    padding-inline-start: 0;
+  }
+
+  .header_subtitle {
+    align-self: center;
+    justify-self: end;
+    inline-size: clamp(364px, calc(100% / 2 - 10px), 491px);
+  }
+
+  .content {
+    padding: 60px 20px;
+    gap: 80px;
+  }
+
+  .section {
+    grid-template-columns: clamp(14.75rem, 30.859vw - 0.063rem, 19.688rem) 1fr;
+  }
+
+  .section_what__advice-list {
+    grid-column-start: span 2;
+  }
+
+  .section_gallery {
+    gap: 20px;
+  }
+
+  .images-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .images-list__item:first-child,
+  .images-list__item:last-child {
+    grid-column-start: span 2;
+  }
+
+  .images-list__item:nth-child(2),
+  .images-list__item:nth-child(3) {
+    grid-row-start: span 2;
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    margin-inline-start: 20px;
+    margin-block-start: 0;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .header__title {
+    text-shadow: 4px 4px 0 var(--title-shadow);
+  }
+
+  .footer__title {
+    text-shadow: 2px 2px 0 var(--title-shadow);
+  }
+
+  .section_what__advice-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
