--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,17 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --page-text-color: #f1b2ce;
+  --page-font-family: "IBM Plex Mono", monospace;
+  --page-background-color: #000028;
+  --accent-color: #ff0070;
+  --menu-color: #ff0070;
+  --title-shadow: #ff0070;
+  --decor-color: #ff0070;
+  --question-color: #ff0070;
+  --title-decor-color: #000028;
+  --hover-button-color: #ff007040;
+  --background-image: url(../images/cover-image-dark.png);
+  --page-title-color: #db00ff;
+  --page-font-size: 18px;
+  --pink-color: #ff8dcb;
+  --rec-decor-visibility: visible;
+}
